# react-native-opencv-cpp

./: .gitignore  App.tsx  OpencvCpp.podspec  README.md  app.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/debug/java/com/opencvcpp/: ReactNativeFlipper.java
android/app/src/main/java/com/opencvcpp/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/opencvcpp/module/: OpencvCppModule.java  OpencvCppPackage.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/opencvcpp/: ReactNativeFlipper.java
cpp/: opencv-cpp.cpp  opencv-cpp.h
ios/: Podfile  RCTOpencvCppModule.h  RCTOpencvCppModule.mm
ios/OpencvCpp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/OpencvCpp.xcodeproj/: project.pbxproj
ios/OpencvCpp.xcodeproj/xcshareddata/xcschemes/: OpencvCpp.xcscheme
ios/OpencvCpp.xcworkspace/: contents.xcworkspacedata
ios/OpencvCppTests/: OpencvCppTests.m
